# mini-mind-kernel

./: .gitignore  KO46_DYNAMIC_ROPE_TEMPORAL_FOCUS.md  LICENSE  PROGENY_BUILD.md  README.md  The_Many_Mind_Kernel_Living_Doc.md  launch-progeny.sh  launch-qwen.sh  progeny.7z  pyproject.toml  shared.7z  tests.7z
docs/: ATTRACTOR_FLOW_DYNAMICS.md  OPS_GUIDE.md  OZ_SESSION_HANDOFF.md  OZ_SESSION_HANDOFF_20260416.md  PROGENY_BUILD.md  REHYDRATION.md  SPIRAL_DIFFUSION_DESIGN.md  STARTUP.md  The_Many_Mind_Kernel_Living_Doc.md  comm_ref.php  processor_comm_ref.php
falcon/: REQUIREMENTS.md  __init__.py
falcon/api/: routes.py  server.py
falcon/src/: event_parsers.py  progeny_protocol.py  stt.py  tick_accumulator.py  (+1 more)
progeny/: REQUIREMENTS.md  __init__.py
scripts/: add_residual_dim.py  emotional_bases.py  import_seed_data.py  peek_npc.py  stub_progeny.py  test_residual_9d.py  test_ws_roundtrip.py  test_ws_simple.py
shared/: __init__.py  config.py  constants.py  embedding.py  emotional.py  qdrant_wrapper.py  schemas.py
tests/: test_agent_scheduler.py  test_client.py  test_compression_qdrant.py  test_dispatch.py  test_embedding.py  test_emotional_delta.py  test_emotional_projection.py  test_event_accumulator.py  test_fact_pool.py  test_harmonic_buffer.py  test_ingest_integration.py  test_llm_client.py  test_memory_compressor.py  test_memory_retrieval_qdrant.py  test_memory_writer.py  test_prompt_formatter.py  test_qdrant_client.py  test_qdrant_wrapper.py  test_rehydration_qdrant.py  test_response_expander.py  test_tier_modulator_integration.py  test_uncertainty.py
(+27 files in other folders)
