[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "many-mind-kernel"
version = "0.1.0"
description = "Skyrim AI Companion — Falcon/Progeny two-service HerikaServer replacement"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["shared*", "falcon*", "progeny*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["falcon/tests", "progeny/tests", "tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
